2024-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/Makefile.am: Eliminate the libttkcommon "shim" library
	which allowed TkMagick to work and use a different approach.
	TclMagick is not dependent on libtk.  Only TkMagick is dependent
	on libtk.

2024-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/links.rst: Update oss-fuzz bug tracker URL.

2024-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Hull): Fix regression created by Mercurial
	changeset 16913:78aa63677935 "Add casts to prevent unnecessary
	value truncation in WIN64 build" on Saturday, October 21, 2023.

	* m4, TclMagick/unix/m4: Update to libtool 2.5.3.

2024-09-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/Makefile.am: 'make test' does something.  Not sure yet
	what it should be.

	* TclMagick/tests/test-wand.tcl: Fix memory leak of $img and $seq.

	* TclMagick/tests/test-draw.tcl: Fix memory leak of $img.

	* generic/TclMagickAppInit.c: Add a TclMagick test program.

	* TclMagick/generic/TkMagick.c: Fix memory leak of 'fonts' and
	'formats' lists members.

2024-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/Makefile.am: Now uses non-recursive build and produces
	xz tarball.  The make 'distcheck' target is not working properly
	yet.
	(AM_DISTCHECK_CONFIGURE_FLAGS): Change the argument to
	--exec-prefix so that 'make distcheck' now passes.

2024-09-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/display.c (MagickXROIImage): ThresholdCommand was missing
	from EffectsCommands list. In the Region of Interest mode the
	button command array is missing a command corresponding to
	"Threshold...", and that is also messing up all buttons further
	below.  SourceForge patch #82 "Add missing Threshold to command
	array of Region of Interest mode" by Alex Barsky.

	* TclMagick/generic/config.h.in, TclMagick/generic/libttkcommon.h:
	Support a configuration header.
