@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020241002"
-#define public MagickPackageReleaseDate "snapshot-20241002"
+#define public MagickPackageVersionAddendum ".020241003"
+#define public MagickPackageReleaseDate "snapshot-20241003"
