@@ -38,6 +38,17 @@
 
 <main id="graphicsmagick-changelog">
 <h1 class="title">GraphicsMagick ChangeLog</h1>
+<p>2024-10-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li><p>magick/gem.c (Hull): More fixes for regression created by
+Mercurial changeset 16913:78aa63677935 &quot;Add casts to prevent
+unnecessary value truncation in WIN64 build&quot; on Saturday, October
+21, 2023.</p></li>
+<li><p>TclMagick/generic/TclMagickAppInit.c: Refresh implementation
+based on latest code from reference tcl/unix/tclAppInit.c.</p></li>
+</ul>
+</blockquote>
 <p>2024-10-02  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
