@@ -79,7 +79,7 @@
 <h1><a class="toc-backref" href="#id8">GraphicsMagick Vulnerabilities</a></h1>
 <p>Search for <a class="reference external" href="https://www.cvedetails.com/vulnerability-list/vendor_id-2802/Graphicsmagick.html">GraphicsMagick</a> CVEs.</p>
 <p>Debian vulnerabilities in <a class="reference external" href="https://security-tracker.debian.org/tracker/source-package/graphicsmagick">GraphicsMagick</a>.</p>
-<p>Oss-fuzz issues pertaining to <a class="reference external" href="https://issues.oss-fuzz.com/savedsearches/6886197">GraphicsMagick</a>.</p>
+<p>Oss-fuzz issues pertaining to <a class="reference external" href="https://issues.oss-fuzz.com/savedsearches/6886196">GraphicsMagick</a>.</p>
 <p>Oss-fuzz build status for <a class="reference external" href="https://oss-fuzz-build-logs.storage.googleapis.com/index.html#graphicsmagick">GraphicsMagick</a>.</p>
 </section>
 <section id="image-processing-topics">
