@@ -1,3 +1,13 @@
+2024-10-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/gem.c (Hull): More fixes for regression created by
+	Mercurial changeset 16913:78aa63677935 "Add casts to prevent
+	unnecessary value truncation in WIN64 build" on Saturday, October
+	21, 2023.
+
+	* TclMagick/generic/TclMagickAppInit.c: Refresh implementation
+	based on latest code from reference tcl/unix/tclAppInit.c.
+
 2024-10-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* TclMagick/Makefile.am: Eliminate the libttkcommon "shim" library
